updates(block-floating-cards): fixed icon and title alignment issue

--- a/components/block/block-floating-cards/index.sass
+++ b/components/block/block-floating-cards/index.sass
@@ -6,7 +6,7 @@
     justify-content: center
   
   &__card
-    @include col (5)
+    @include col (5.5)
     @include tablet
       padding: 3rem
     @include nexus
@@ -30,8 +30,13 @@
       width: 100%
 
     &-header
+      @include laptop-sm
+        flex-direction: column
+      @include tablet
+        flex-direction: unset
       display: flex
       flex-wrap: wrap
+      align-items: center
 
     &-image
       @include nexus
